# github-bot-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
blar/: asgi.py  settings.py  urls.py  wsgi.py
django_blar_graph/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
django_blar_graph/migrations/: 0001_initial.py
django_blar_graph/services/: git_hub.py  run.py
